# django-vue

./: .gitignore  .prettierrc.json  README.md  docker-compose-stack.yaml  docker-compose-swarm.yaml  docker-compose.yaml
.github/backup/: docker-compose.yaml
.github/disabled/: pages.yaml  preview.yaml
.github/workflows/: lint.yaml
app/: Dockerfile  docker-entrypoint.sh  pyproject.toml
app/api/: urls.py  views.py
app/project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
nginx/: Dockerfile  nginx.conf
web/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/: main.css
web/src/components/: FooterView.vue  GHStatsCard.vue  HeaderView.vue  ThemeSwitch.vue
web/src/config/: links.ts  settings.ts
web/src/router/: index.ts
web/src/views/: AboutView.vue  HomeView.vue
