[project]
name = "django-vue"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
  "django~=5.2",
  "django-redis>=5,<6",
  "gunicorn",
  # "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "bandit",
  "black",
  "coverage",
  "django-extensions",
  "isort",
  "mypy",
  "python-dotenv",
  "ruff",
  "tombi",
  "toml-run",
  "ty",
  "werkzeug",
  "yamllint",
]

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B105"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(migrations|templates|\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = [".venv/*", "migrations/*", "node_modules/*"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["app"]
skip = [".venv", "migrations", "node_modules", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true
exclude = [".venv", "migrations", "node_modules"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py312"
extend-exclude = ["migrations", ".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]

# Scripts
# https://github.com/cssnr/toml-run
[tool.scripts]
dev = [
  "uv run dotenv -f ../web/.env run -- uv run dotenv -f ../web/.env.local run -- uv run python manage.py runserver_plus 0.0.0.0:9000"
]
test = [
  "uv run coverage run --rcfile=pyproject.toml app/manage.py test --verbosity 2 --keepdb",
  "uv run coverage xml",
  "uv run coverage report -m",
]
format = [
  "uv run black .",
  "uv run isort .",
  "uv run ruff format",
  "uv run tombi format",
]
lint = [
  "run bandit",
  "run mypy",
  "run ruff",
  "run yamllint",
  "uv run black --check .",
  "uv run isort -c .",
  "uv run tombi lint",
  "uv run ty check -v .",
  "uv lock --check",
]
bandit = "uv run bandit -c pyproject.toml -r ."
mypy = "uv run mypy ."
ruff = "uv run ruff check ."
yamllint = "uv run yamllint -c ../.github/yamllint.yaml ."
